# schemaspec

./: .editorconfig  justfile  prompt.md  pyproject.toml  readme.md
schemaspec/: core.py  service.py
tests/: test_schema.py  test_service.py
